utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/valid/RequiredAttributesProduct.ac
package valid

product RequiredAttributesProduct {
    path "some/awesome/path" resolved from CWD

    artifact SOME_RESOURCE {
        path "some/awesome/path" resolved from CWD
    }
}
