utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/invalid/ArtifactNameTool.ac
package invalid

tool artifactNameTool {
    path "some/awesome/path" resolved from CWD
}
